frontend/src/index.css
/* google font */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap');
@import 'rsuite/dist/rsuite-no-reset.min.css';
@import "react-quill/dist/quill.snow.css";



/* layout */
:root {
  --primary: #000000;
  --error: #9c9117;
}

body {
  background: #f1f1f1;
  margin: 0;
  font-family: Verdana, sans-serif;
}

header {
  background: #fff;
}

header .container {
  max-width: 1400px;
  margin: 0 auto;
  padding: 10px 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

header a {
  color: #333;
  text-decoration: none;
}

.pages {
  max-width: 1400px;
  padding: 20px;
  margin: 0 auto;
}

/* homepage */
.home {
  display: grid;
  grid-template-columns: 3fr 1fr;
  gap: 100px;
}

.story-details {
  background: #fff;
  border-radius: 4px;
  margin: 20px auto;
  padding: 20px;
  position: relative;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.05);
}

.story-details h4 {
  margin: 0 0 10px 0;
  font-size: 1.2em;
  color: var(--primary);
}

.story-details p {
  margin: 0;
  font-size: 0.9em;
  color: #555;
}

.story-details span {
  position: absolute;
  top: 20px;
  right: 20px;
  cursor: pointer;
  background: #f1f1f1;
  padding: 6px;
  border-radius: 50%;
  color: #333;
}

/* new story form */
label,
input {
  display: block;
}

input {
  padding: 10px;
  margin-top: 15px;
  margin-bottom: 10px;
  width: 100%;
  border: 1px solid #ddd;
  border-radius: 4px;
  box-sizing: border-box;
}

.short-select {
  width: 70%;
  margin-top: 10px;
  margin-bottom: 10px;
}

textarea {
  padding: 10px;
  margin-top: 0px;
  margin-bottom: 20px;
  width: 100%;
  height: 450px;
  border: 1px solid #ddd;
  border-radius: 4px;
  box-sizing: border-box;
}

button {
  background: var(--error);
  border: 0;
  color: #FFF;
  padding: 10px;
  font-family: Verdana, sans-serif;
  border-radius: 4px;
  cursor: pointer;
}

div.error {
  padding: 10px;
  background: #ffefef;
  border: 1px solid var(--error);
  color: var(--error);
  border-radius: 4px;
  margin: 20px 0;
}

/* Navbar styles */
.navbar {
  display: flex;
  align-items: center;
  padding: 0 20px;
  background: #fff;
  height: 50px; 
}

.nav-logo h1 {
  font-family: 'Poppins', sans-serif;
  font-weight: 800;
  color: var(--primary);
  margin: 0;
}

.nav-links {
  display: flex;
  list-style-type: none;
  margin-left: auto;
}

.nav-item {
  font-family: 'Poppins', sans-serif;
  font-weight: 400;
  color: var(--primary);
  text-decoration: none;
  margin: 0 15px;
  transition: color 0.3s ease;
}

.nav-item:hover {
  color: var(--error);
}

.nav-icon {
  font-size: 24px;
  color: var(--primary);
  cursor: pointer;
}

.logo-container {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100px;
  width: 100%;
}

.collapsed {
  display: none;
}

.centered-button {
  text-align: center;
  margin-bottom: 10px;
  margin-top: 10px;
}

.story-cards-container {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  gap: 10px;
  padding: 20px;
}

.story-card {
  display: flex;
  flex-direction: column;
  align-items: left;
  justify-content: left;
  padding: 15px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  border-radius: 8px;
  background: #f9f9f9;
  transition: transform 0.3s ease;
  font-family: 'Poppins', sans-serif;
  max-width: 100%;
  max-height: 600px;
  word-wrap: break-word;
  min-height: 370px;
  max-height: 370px;
}

.story-card:hover {
  transform: translateY(-5px);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.story-p {
  margin: 0;
  max-inline-size: 99%;
  max-height: fit-content;
  word-wrap: break-word;
  padding-bottom: 5px;
}

.story-date {
  margin: 0;
  max-inline-size: 90%;
  max-height: fit-content;
  word-wrap: break-word;
}

.story-h4 {
  margin: 0px;
  padding-top: 20%;
  max-inline-size: 98%;
  padding-top: 5px;
  padding-bottom: 5px;
  word-wrap: break-word;
}

.story-sub {
  margin-top: auto;
  font-size: 0.8em;
}

.story-date {
  font-size: 0.8em;
}

.story-link {
  all: unset;
  cursor: pointer;
}

/* Styling for Quill alignments */
.ql-align-left {
  text-align: left;
}

.ql-align-center {
  text-align: center;
}

.ql-align-right {
  text-align: right;
}

.story-content {
  float: left;
  width: 70%;
  height: 85vh;
  overflow-y: scroll;
}

.story-content {
  float: left;
  width: 70%;
  height: 85vh;
  word-wrap: break-word;
  margin-right: 10px;
  outline:0.01em solid black;
}


.story-info {
  float: right;
  width: 28%;
  overflow-wrap: break-word;
  height: 800px;
  overflow-y: scroll;
}
@media (max-width: 600px) {
  .story-content,
  .story-info {
    width: 100%;
    float: none;
    margin-right: 0; /* Reset margin for small screens */
  }

@media (max-height: 870px) {
  .story-content {
    float: left;
    width: 70%;
    height: 750px;
    overflow-y: scroll;
    margin-right: 10px;
  }
  .story-info {
    float: right;
    width: 28%;
    word-break: break-all;
    height: 750px;
    overflow-y: scroll;
  }
}
}

@media (max-height: 770px) {
  .story-content {
    float: left;
    width: 70%;
    height: 650px;
    overflow-y: scroll;
    margin-right: 10px;
  }
  .story-info {
    float: right;
    width: 28%;
    word-break: break-all;
    height: 650px;
    overflow-y: scroll;
  }
}

.story-page-body {
  padding-left: 0%;
  overflow: hidden;
}

.right-align-span {
  text-align: right;
}

.info-line {
  display: flex;
  justify-content: space-between;
}

.info-content {
  text-align: right;
}

.story-content img {
  max-width: 100%;
}

.solid {
  border: none;
  height: 1px;
  background-color: #333; 
}

.quill {
  max-height: fit-content;
  overflow: hidden;
  background-color: white;
}

.check-tree {
  margin-right: 2px;
  padding-bottom: 5px;
}

.check-tree2 {
  margin-right: 10px;
  padding-bottom: 5px;
}

.input-container {
  display: flex;
}

.short-input {
  width: 80%;
  margin-top: 0px;
  margin-bottom: 5px;
  margin-right: 1%;
  font-size: 18px;
}

.author-input {
  padding-top: 10px;
}

.story-form-button {
  margin-top: 5px;
  margin-bottom: 5px;
  font-size: 16px;
  width: 150px;
  border: none;
  border-radius: 20px;
  font-family: 'Poppins', sans-serif;
  cursor: pointer;
  transition: background-color 0.3s ease;
  background: #326C6F;
  color: white;
}

.story-form-button:hover {
  background: #224957;
}

.ql-editor {
  font-size: 16px;
}

.image-container {
  height: 150px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-bottom: 20px;
}

.image-container img {
  max-width: 100%;
  max-height: 100%;
}

.tags-container {
  overflow-wrap: break-word;
}

.create-story-button, .pending-story-button {
  padding: 10px;
  font-size: 16px;
  width: 200px;
  border: none;
  border-radius: 20px;
  font-family: 'Poppins', sans-serif;
  cursor: pointer;
  transition: background-color 0.3s ease;
  background: #326C6F;
  color: white;
  margin-left: 2%;
}

.pending-story-button {
  margin-left: 0.5%;
}

.create-story-button:hover, .pending-story-button:hover {
  background: #224957;
}

.pending-story-admin-controls {
  margin-left: 25%;
  margin-right: 25%;
  margin-bottom: 1%;
}

.quill {
  background: #f1f1f1;
}

.ql-toolbar {
  margin-bottom: 3px;
}

.ql-snow {
  border-top-left-radius: 0.7em;
  border-top-right-radius: 0.7em;
  border-bottom-left-radius: 0.7em;
  border-bottom-right-radius: 0.7em;
  background-color: white;
}

.quill, iframe {
  text-align: center;
}

.iframe {
  display:block;
}

#iframe-div{
  width:100%;
  float:left;
  text-align:center;
}
div.sub, iframe, image {
  margin: 0 auto;
  background-color: #777;
}

.storycontent, .ql-video {
  margin-left: 16%;
  max-width: 100%;
}
@media (max-width: 1160px) {
  .storycontent, .ql-video {
    margin-left: 0%;
    margin-right: 0%;
  }
}

